# hashable

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .hgignore  .stylish-haskell.yaml  .travis.yml  CHANGES  CHANGES.md  cabal.bench.project  cabal.haskell-ci  cabal.project  hashable.cabal  haskell-ci.sh
.github/workflows/: haskell-ci-bench.yml  haskell-ci.yml  simple.yml
Data/: Hashable.hs
Data/Hashable/: Class.hs  Generic.hs  Lifted.hs  RandomSource.hs  SipHash.hs
Data/Hashable/Generic/: Instances.hs
Data/Hashable/RandomSource/: Posix.hs  Windows.hsc
benchmarks/: Benchmarks.hs  Makefile  hashable-benchmarks.cabal
benchmarks/cbits/: inthash.c  siphash-sse2.c  siphash-sse41.c  siphash.c  siphash.h
cbits/: fnv.c  getRandomBytes.c  hashByteString.c  inthash.c  mmap.c  siphash-sse2.c  siphash-sse41.c  siphash.c  siphash.h
examples/: Main.hs
hashable-bench/: cabal.project  hashable-bench.cabal  xxHash-0.8.2  xxHash-0.8.3
hashable-bench/benchmarks/: Benchmarks.hs
hashable-bench/benchmarks/cbits/: fnv.c  siphash-sse2.c  siphash-sse41.c
hashable-bench/src-siphash/Data/Hashable/: SipHash.hs
include/: HsHashable.h  HsXXHash.h  siphash.h
src/Data/: Hashable.hs
src/Data/Hashable/: Class.hs  FFI.hs  Generic.hs  Imports.hs  Lifted.hs  LowLevel.hs  Mix.hs  XXH3.hs
src/Data/Hashable/Generic/: Instances.hs
tests/: Main.hs  Properties.hs  Regress.hs  xxhash-tests.hs
tests/Regress/: Mmap.hsc
