cabal-version:      1.12
name:               hashable-bench
version:            0
synopsis:           hashable benchmarks
description:        hashable benchmarks.
homepage:           http://github.com/haskell-unordered-containers/hashable

-- SPDX-License-Identifier : BSD-3-Clause
license:            BSD3
license-file:       LICENSE
author:
  Milan Straka <fox@ucw.cz>
  Johan Tibell <johan.tibell@gmail.com>

maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
bug-reports:
  https://github.com/haskell-unordered-containers/hashable/issues

stability:          Provisional
category:           Data
build-type:         Simple
tested-with:
  GHC ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.4
   || ==8.10.7
   || ==9.0.1
   || ==9.0.2
   || ==9.2.5
   || ==9.4.4

extra-source-files:
  benchmarks/cbits/*.h
  include/HsHashable.h

flag integer-gmp
  description:
    Are we using @integer-gmp@ to provide fast Integer instances? No effect on GHC-9.0 or later.

  default:     True

flag sse2
  description: Do we want to assume that a target supports SSE 2?
  default:     True
  manual:      True

flag sse41
  description: Do we want to assume that a target supports SSE 4.1?
  default:     False
  manual:      True

library
  exposed-modules:
    Data.Hashable
    Data.Hashable.Generic
    Data.Hashable.Lifted

  other-modules:
    Data.Hashable.Class
    Data.Hashable.Generic.Instances
    Data.Hashable.Imports
    Data.Hashable.LowLevel

  c-sources:        cbits/fnv.c
  include-dirs:     include
  hs-source-dirs:   src
  build-depends:
      base        >=4.10.1.0 && <4.18
    , bytestring  >=0.10.8.2 && <0.12
    , containers  >=0.5.10.2 && <0.7
    , deepseq     >=1.4.3.0  && <1.5
    , filepath    >=1.4.1.2  && <1.5
    , ghc-prim
    , text        >=1.2.3.0  && <1.3  || >=2.0 && <2.1

  if !impl(ghc >=9.2)
    build-depends: base-orphans >=0.8.6

  if !impl(ghc >=9.4)
    build-depends: data-array-byte >=0.1.0.1 && <0.2

  if impl(ghc >=9)
    build-depends: ghc-bignum >=1.0 && <1.4

    if !impl(ghc >=9.2)
      build-depends: ghc-bignum-orphans >=0.1 && <0.2

  else
    if flag(integer-gmp)
      build-depends: integer-gmp >=0.4 && <1.1

    else
      -- this is needed for the automatic flag to be well-balanced
      build-depends: integer-simple

  default-language: Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    MagicHash
    MultiParamTypeClasses
    ScopedTypeVariables
    Trustworthy
    TypeOperators
    UnliftedFFITypes

  ghc-options:      -Wall -fwarn-tabs

benchmark hashable-benchmark
  -- We cannot depend on the hashable library directly as that creates
  -- a dependency cycle.
  hs-source-dirs:   benchmarks src-siphash
  main-is:          Benchmarks.hs
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , criterion       >=1.0
    , ghc-prim
    , hashable-bench
    , siphash
    , text

  if impl(ghc)
    build-depends:
        ghc-prim
      , text      >=0.11.0.5

  if (impl(ghc) && flag(integer-gmp))
    build-depends: integer-gmp >=0.2

  if impl(ghc >=7.2.1)
    cpp-options: -DGENERICS

  include-dirs:     benchmarks/cbits
  includes:         siphash.h
  other-modules:    Data.Hashable.SipHash
  c-sources:
    benchmarks/cbits/inthash.c
    benchmarks/cbits/siphash.c
    benchmarks/cbits/wang.c

  if ((arch(i386) || arch(x86_64)) && flag(sse2))
    cpp-options: -DHAVE_SSE2
    c-sources:   benchmarks/cbits/siphash-sse2.c

    if flag(sse41)
      cpp-options: -DHAVE_SSE41
      c-sources:   benchmarks/cbits/siphash-sse41.c

  ghc-options:      -Wall -O2
  default-language: Haskell2010

source-repository head
  type:     git
  location:
    https://github.com/haskell-unordered-containers/hashable.git
