cabal-version:      1.12
name:               hashable-bench
version:            0
synopsis:           hashable benchmarks
description:        hashable benchmarks.
homepage:           http://github.com/haskell-unordered-containers/hashable

-- SPDX-License-Identifier : BSD-3-Clause
license:            BSD3
license-file:       LICENSE
author:
  Milan Straka <fox@ucw.cz>
  Johan Tibell <johan.tibell@gmail.com>

maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
bug-reports:
  https://github.com/haskell-unordered-containers/hashable/issues

stability:          Provisional
category:           Data
build-type:         Simple
tested-with:
  GHC ==9.6.5
   || ==9.8.2
   || ==9.10.1

extra-source-files:
  include/HsHashable.h
  include/HsXXHash.h
  xxHash-0.8.2/xxhash.h

library
  exposed-modules:
    Data.Hashable
    Data.Hashable.Generic
    Data.Hashable.Lifted

  other-modules:
    Data.Hashable.Class
    Data.Hashable.FFI
    Data.Hashable.Generic.Instances
    Data.Hashable.Imports
    Data.Hashable.LowLevel
    Data.Hashable.Mix
    Data.Hashable.XXH3

  include-dirs:     include xxHash-0.8.2/
  includes:
    HsHashable.h
    HsXXHash.h
    xxhash.h

  hs-source-dirs:   src
  build-depends:
      base        >=4.10.1.0 && <4.21
    , bytestring  >=0.10.8.2 && <0.13
    , containers  >=0.5.10.2 && <0.8
    , deepseq     >=1.4.3.0  && <1.6
    , ghc-prim
    , text        >=1.2.3.0  && <1.3  || >=2.0 && <2.2

  -- depend on os-string on newer GHCs only.
  -- os-string has tight lower bound on bytestring, which prevents
  -- using bundled version on older GHCs.
  build-depends: os-string >=2.0.2

  -- we also ensure that we can get filepath-1.5 only with GHC-9.2
  -- therefore there is else-branch with stricter upper bound.
  build-depends: filepath >=1.4.200.1 && <1.6

  -- Integer internals
  build-depends: ghc-bignum >=1.3 && <1.4

  default-language: Haskell2010
  other-extensions:
    BangPatterns
    CPP
    DeriveDataTypeable
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    MagicHash
    MultiParamTypeClasses
    ScopedTypeVariables
    Trustworthy
    TypeOperators
    UnliftedFFITypes

  ghc-options:      -Wall -fwarn-tabs
  ghc-options:      -optc=-march=native -optc-mtune=native

benchmark hashable-benchmark
  -- We cannot depend on the hashable library directly as that creates
  -- a dependency cycle.
  hs-source-dirs:   benchmarks
  main-is:          Benchmarks.hs
  type:             exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , criterion       >=1.0
    , ghc-prim
    , hashable-bench
    , siphash
    , text

  if impl(ghc)
    build-depends:
        ghc-prim
      , text      >=0.11.0.5

  ghc-options:      -Wall
  default-language: Haskell2010

source-repository head
  type:     git
  location:
    https://github.com/haskell-unordered-containers/hashable.git
